promises,dynamic elem done

--- a/EventListener.html
+++ b/EventListener.html
@@ -11,6 +11,7 @@
 
     <script>
         const el = document.getElementById("clickButton");
+        const nameBlock = document.getElementById('name-block');
 
         el.addEventListener("click" , () =>{
             console.log("I am clicked")
